@startuml Entity-Relationship-Diagram

' -- Entities based on the SQL schema --

entity "Product" as product {
  * product_id : int <<PK>>
  --
  * name : varchar
  * is_pizza : boolean
  * price : decimal
}

entity "Pizza" as P {
  * product_id : INT <<PK, FK>>
  --
}

entity "Drink" as drink {
  * product_id : INT <<PK, FK>>
  --
}

entity "Dessert" as dessert {
  * product_id : INT <<PK, FK>>
  --
}

entity "OrderItem" as OI {
  * order_item_id : int <<PK>>
  --
  * order_id : int <<FK>> 
  * product_id : int <<FK>>
  * quantity : int
  * price : decimal
}

entity "Orders" as O {
  * order_id : int <<PK>>
  --
  * customer_id : int <<FK>>
  * delivery_person_id : int <<FK>>
  * discount_id : int <<FK>>
  * total_price : decimal
  * total_amount : int
  * order_time : datetime

}

' -- Other existing entities (assumed) --

entity "Customer" as customer {
  * customer_id : int <<PK>>
  --
  * name : varchar
  * postcode : varchar
  * birth_date : date
  * address : varchar
}

entity "DeliveryPerson" as DP {
  * delivery_person_id : int <<PK>>
  --
  * is_available : boolean
  * postcode : varchar
  * gender : varchar
  * age : int
}

entity "DiscountCode" as DC {
  * discount_id : int <<PK>>
  --
  * percentage : decimal
  * cost : decimal
  * used : boolean
}

entity "Ingredient" as I {
  * ingredient_id : INT <<PK>>
  --
  * name : VARCHAR
  * type : VARCHAR -- e.g 'vegan', 'vegetarian', 'non-vegetarian'
}


' -- Relationships --

' Inheritance: Pizza, Drink, and Dessert are types of Product
product <|-- P
product <|-- drink
product <|-- dessert

' Core order relationships
customer ||--o{ O : places
O      ||--o{ OI : contains
OI     }o--|| product : includes
DP     ||--o{ O : delivers

' Other relationships (assumed)
product ||--o{ I : "only valid if pizza"
DC ||--|| O : "applies to"

@enduml